--- a/genindex.html
+++ b/genindex.html
@@ -1179,6 +1179,8 @@
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.RESOURCE">RESOURCE (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.resource_attributes">resource_attributes() (copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
       <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.RSYNC">RSYNC (copyxnat.config.app_settings.TransferMode attribute)</a>
@@ -1392,6 +1394,8 @@
 <h2 id="X">X</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.xml_compare">xml_compare() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_xml.html#copyxnat.xnat.xnat_xml.xml_from_string">xml_from_string() (in module copyxnat.xnat.xnat_xml)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner">XmlCleaner (class in copyxnat.xnat.xml_cleaner)</a>
