--- a/_modules/copyxnat/commands/compare_command.html
+++ b/_modules/copyxnat/commands/compare_command.html
@@ -44,6 +44,7 @@
 <span class="kn">import</span> <span class="nn">os</span>
 
 <span class="kn">from</span> <span class="nn">copyxnat.xnat.commands</span> <span class="kn">import</span> <span class="n">Command</span>
+<span class="kn">from</span> <span class="nn">copyxnat.xnat.xml_cleaner</span> <span class="kn">import</span> <span class="n">XmlCleaner</span>
 
 
 <div class="viewcode-block" id="CompareCommand"><a class="viewcode-back" href="../../../copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand">[docs]</a><span class="k">class</span> <span class="nc">CompareCommand</span><span class="p">(</span><span class="n">Command</span><span class="p">):</span>
@@ -63,13 +64,38 @@
         <span class="n">label</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">dst_project</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">initial_from_parent</span> <span class="o">=</span> <span class="n">inputs</span><span class="o">.</span><span class="n">dst_xnat</span><span class="o">.</span><span class="n">project</span><span class="p">(</span><span class="n">label</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">outputs</span> <span class="o">=</span> <span class="s1">&#39;&#39;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span> <span class="o">=</span> <span class="n">XmlCleaner</span><span class="p">(</span><span class="n">app_settings</span><span class="o">=</span><span class="n">inputs</span><span class="o">.</span><span class="n">app_settings</span><span class="p">,</span>
+                                      <span class="n">reporter</span><span class="o">=</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">output</span><span class="p">(</span><span class="s1">&#39;Comparing </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">scope</span><span class="p">))</span>
 
     <span class="k">def</span> <span class="nf">_run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="p">):</span>
+        <span class="c1"># Add the before and after IDs so they won&#39;t be included in differences</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">add_tag_remaps</span><span class="p">(</span><span class="n">src_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span>
+                                        <span class="n">dst_item</span><span class="o">=</span><span class="n">from_parent</span><span class="p">)</span>
+
+        <span class="c1"># Recurse to children before checking item itself, so that child ID</span>
+        <span class="c1"># remappings are added before the parent XML is processed</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_check_children_and_recurse</span><span class="p">(</span><span class="n">src_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span>
+                                         <span class="n">dst_item</span><span class="o">=</span><span class="n">from_parent</span><span class="p">)</span>
+
+        <span class="bp">self</span><span class="o">.</span><span class="n">_compare</span><span class="p">(</span><span class="n">src_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">dst_item</span><span class="o">=</span><span class="n">from_parent</span><span class="p">)</span>
+
+    <span class="k">def</span> <span class="nf">_compare</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_item</span><span class="p">,</span> <span class="n">dst_item</span><span class="p">):</span>
+        <span class="k">if</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">src_item</span><span class="p">,</span> <span class="s2">&quot;get_xml_string&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">and</span> <span class="nb">getattr</span><span class="p">(</span>
+                <span class="n">dst_item</span><span class="p">,</span> <span class="s2">&quot;get_xml&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">):</span>
+            <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Comparing </span><span class="si">{}</span><span class="s1"> vs </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">src_item</span><span class="o">.</span><span class="n">user_visible_info</span><span class="p">(),</span>
+                                              <span class="n">dst_item</span><span class="o">.</span><span class="n">user_visible_info</span><span class="p">()))</span>
+            <span class="n">src_xml</span> <span class="o">=</span> <span class="n">src_item</span><span class="o">.</span><span class="n">get_xml_string</span><span class="p">()</span>
+            <span class="n">dst_xml</span> <span class="o">=</span> <span class="n">dst_item</span><span class="o">.</span><span class="n">get_xml_string</span><span class="p">()</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">xml_compare</span><span class="p">(</span>
+                <span class="n">src_string</span><span class="o">=</span><span class="n">src_xml</span><span class="p">,</span> <span class="n">dst_string</span><span class="o">=</span><span class="n">dst_xml</span><span class="p">,</span> <span class="n">src_item</span><span class="o">=</span><span class="n">src_item</span><span class="p">,</span>
+                <span class="n">dst_item</span><span class="o">=</span><span class="n">dst_item</span><span class="p">)</span>
+
+    <span class="k">def</span> <span class="nf">_check_children_and_recurse</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_item</span><span class="p">,</span> <span class="n">dst_item</span><span class="p">):</span>
         <span class="n">src_children</span> <span class="o">=</span> <span class="p">{</span><span class="bp">self</span><span class="o">.</span><span class="n">_key</span><span class="p">(</span><span class="n">item</span><span class="p">):</span> <span class="n">item</span> <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span>
-                        <span class="n">xnat_item</span><span class="o">.</span><span class="n">get_children</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ignore_filter</span><span class="p">)}</span>
+                        <span class="n">src_item</span><span class="o">.</span><span class="n">get_children</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ignore_filter</span><span class="p">)}</span>
         <span class="n">dst_children</span> <span class="o">=</span> <span class="p">{</span><span class="bp">self</span><span class="o">.</span><span class="n">_key</span><span class="p">(</span><span class="n">item</span><span class="p">):</span> <span class="n">item</span> <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span>
-                        <span class="n">from_parent</span><span class="o">.</span><span class="n">get_children</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ignore_filter</span><span class="p">)}</span>
+                        <span class="n">dst_item</span><span class="o">.</span><span class="n">get_children</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ignore_filter</span><span class="p">)}</span>
 
         <span class="n">both</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">src_children</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span><span class="o">.</span><span class="n">intersection</span><span class="p">(</span><span class="n">dst_children</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span>
         <span class="n">only_src</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">src_children</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span><span class="o">.</span><span class="n">difference</span><span class="p">(</span><span class="n">dst_children</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span>
