deploy: 1e1922ef0832978c9f2ecaa77ed4465ab3d9200f

--- a/genindex.html
+++ b/genindex.html
@@ -574,15 +574,19 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.FILE">(copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.file_attributes">file_attributes() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.file_logger.html#copyxnat.pyreporter.file_logger.FileLogger">FileLogger (class in copyxnat.pyreporter.file_logger)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.files">files() (copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
 </li>
       <li><a href="copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.find_command">find_command() (in module copyxnat.commands.find_commands)</a>
+</li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.full_label">full_label() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+</li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.full_name_label">full_name_label() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.full_path">full_path() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
@@ -933,6 +937,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.name_label">name_label() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+</li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CacheBox.new_cache">new_cache() (copyxnat.xnat.copy_cache.CacheBox method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.progress.html#copyxnat.pyreporter.progress.Progress.next_progress">next_progress() (copyxnat.pyreporter.progress.Progress method)</a>
@@ -1531,7 +1537,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.3.
     </div>
   </body>
 </html>
