deploy: d971ada226ccf039b22123adc629d6fdb0c61139

--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -248,9 +248,9 @@
                     <span class="n">item</span> <span class="o">=</span> <span class="s1">&#39;Element&#39;</span>
                 <span class="k">else</span><span class="p">:</span>
                     <span class="n">item</span> <span class="o">=</span> <span class="s1">&#39;Attribute&#39;</span>
-                <span class="n">text</span> <span class="o">=</span> <span class="s1">&#39; - </span><span class="si">{}</span><span class="s1"> </span><span class="si">{}</span><span class="s1"> missing from dst: </span><span class="si">{}</span><span class="s1">-&gt;</span><span class="si">{}</span><span class="s1"> (location: </span><span class="si">{}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
-                    <span class="n">item</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">src_value</span><span class="p">,</span> <span class="s1">&#39;(not present)&#39;</span><span class="p">,</span>
-                    <span class="n">src_item</span><span class="o">.</span><span class="n">full_name_label</span><span class="p">())</span>
+                <span class="n">text</span> <span class="o">=</span> <span class="s1">&#39; - </span><span class="si">{}</span><span class="s1"> </span><span class="si">{}</span><span class="s1"> missing from dst: </span><span class="si">{}</span><span class="s1">-&gt;</span><span class="si">{}</span><span class="s1"> (location: </span><span class="si">{}</span><span class="s1">)&#39;</span><span class="o">.</span>\
+                    <span class="nb">format</span><span class="p">(</span><span class="n">item</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">src_value</span><span class="p">,</span> <span class="s1">&#39;(not present)&#39;</span><span class="p">,</span>
+                           <span class="n">src_item</span><span class="o">.</span><span class="n">full_name_label</span><span class="p">())</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_reporter</span><span class="o">.</span><span class="n">output</span><span class="p">(</span><span class="n">text</span><span class="p">)</span>
 
         <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">only_dst</span><span class="p">:</span>
@@ -303,17 +303,18 @@
                             <span class="n">src_item</span><span class="o">=</span><span class="n">src_item</span><span class="p">,</span>
                             <span class="n">dst_item</span><span class="o">=</span><span class="n">dst_item</span><span class="p">,</span>
                             <span class="n">nesting</span><span class="o">=</span><span class="n">nesting</span><span class="p">):</span>
-                        <span class="n">text</span> <span class="o">=</span> <span class="s1">&#39; - Attribute </span><span class="si">{}</span><span class="s1"> matches: </span><span class="si">{}</span><span class="s1">-&gt;</span><span class="si">{}</span><span class="s1"> (location: </span><span class="si">{}</span><span class="s1">)&#39;</span><span class="o">.</span>\
-                            <span class="nb">format</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">src_value</span><span class="p">,</span> <span class="n">dst_value</span><span class="p">,</span>
-                                   <span class="n">src_item</span><span class="o">.</span><span class="n">full_name_label</span><span class="p">())</span>
+                        <span class="n">text</span> <span class="o">=</span> <span class="s1">&#39; - Attribute </span><span class="si">{}</span><span class="s1"> matches: </span><span class="si">{}</span><span class="s1">-&gt;</span><span class="si">{}</span><span class="s1"> (location: </span><span class="si">{}</span><span class="s1">&#39;</span> \
+                               <span class="s1">&#39;)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">src_value</span><span class="p">,</span> <span class="n">dst_value</span><span class="p">,</span>
+                                          <span class="n">src_item</span><span class="o">.</span><span class="n">full_name_label</span><span class="p">())</span>
                         <span class="bp">self</span><span class="o">.</span><span class="n">_reporter</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="n">text</span><span class="p">)</span>
                     <span class="k">else</span><span class="p">:</span>
-                        <span class="n">text</span> <span class="o">=</span> <span class="s1">&#39; - Attribute </span><span class="si">{}</span><span class="s1"> differs: </span><span class="si">{}</span><span class="s1">-&gt;</span><span class="si">{}</span><span class="s1"> (location: </span><span class="si">{}</span><span class="s1">)&#39;</span><span class="o">.</span>\
-                            <span class="nb">format</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">src_value</span><span class="p">,</span> <span class="n">dst_value</span><span class="p">,</span>
-                                   <span class="n">src_item</span><span class="o">.</span><span class="n">full_name_label</span><span class="p">())</span>
+                        <span class="n">text</span> <span class="o">=</span> <span class="s1">&#39; - Attribute </span><span class="si">{}</span><span class="s1"> differs: </span><span class="si">{}</span><span class="s1">-&gt;</span><span class="si">{}</span><span class="s1"> (location: </span><span class="si">{}</span><span class="s1">&#39;</span> \
+                               <span class="s1">&#39;)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">src_value</span><span class="p">,</span> <span class="n">dst_value</span><span class="p">,</span>
+                                          <span class="n">src_item</span><span class="o">.</span><span class="n">full_name_label</span><span class="p">())</span>
                         <span class="bp">self</span><span class="o">.</span><span class="n">_reporter</span><span class="o">.</span><span class="n">output</span><span class="p">(</span><span class="n">text</span><span class="p">)</span>
 
-    <span class="k">def</span> <span class="nf">_skip_compare</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">):</span>
+    <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">_skip_compare</span><span class="p">(</span><span class="n">key</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">key</span> <span class="o">==</span> <span class="s1">&#39;@http://www.w3.org/2001/XMLSchema-instance:schemaLocation&#39;</span><span class="p">:</span>
             <span class="k">return</span> <span class="kc">True</span>
         <span class="k">if</span> <span class="n">key</span> <span class="o">==</span> <span class="s1">&#39;@URI&#39;</span><span class="p">:</span>
