--- a/genindex.html
+++ b/genindex.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index &#8212; CopyXnat  documentation</title>
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="_static/classic.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="_static/classic.css" />
     
-    <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
+    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
@@ -1351,6 +1351,8 @@
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor.visible_name">visible_name (copyxnat.xnat.xnat_interface.XnatAssessor attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.visible_name">(copyxnat.xnat.xnat_interface.XnatBase property)</a>
+</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.visible_name">(copyxnat.xnat.xnat_interface.XnatExperiment attribute)</a>
 </li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.visible_name">(copyxnat.xnat.xnat_interface.XnatFile attribute)</a>
@@ -1372,8 +1374,6 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatSubject.visible_name">(copyxnat.xnat.xnat_interface.XnatSubject attribute)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.visible_name">visible_name() (copyxnat.xnat.xnat_interface.XnatBase property)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -1419,6 +1419,8 @@
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor.xnat_type">xnat_type (copyxnat.xnat.xnat_interface.XnatAssessor attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.xnat_type">(copyxnat.xnat.xnat_interface.XnatBase property)</a>
+</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.xnat_type">(copyxnat.xnat.xnat_interface.XnatExperiment attribute)</a>
 </li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.xnat_type">(copyxnat.xnat.xnat_interface.XnatFile attribute)</a>
@@ -1442,8 +1444,6 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.xnat_type">xnat_type() (copyxnat.xnat.xnat_interface.XnatBase property)</a>
-</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor">XnatAssessor (class in copyxnat.xnat.xnat_interface)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase">XnatBase (class in copyxnat.xnat.xnat_interface)</a>
@@ -1537,7 +1537,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.1.
     </div>
   </body>
 </html>
