--- a/_modules/copyxnat/commands/copy_command.html
+++ b/_modules/copyxnat/commands/copy_command.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>copyxnat.commands.copy_command &#8212; CopyXnat  documentation</title>
-    <link rel="stylesheet" href="../../../_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="../../../_static/classic.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="../../../_static/classic.css" />
     
-    <script id="documentation_options" data-url_root="../../../" src="../../../_static/documentation_options.js"></script>
+    <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js"></script>
     <script src="../../../_static/jquery.js"></script>
     <script src="../../../_static/underscore.js"></script>
     <script src="../../../_static/doctools.js"></script>
@@ -88,7 +88,7 @@
 
         <span class="c1"># Check for missing session types and decide whether to continue</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">_check_session_types</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">):</span>
-            <span class="k">return</span>
+            <span class="k">return</span> <span class="kc">False</span>
 
         <span class="c1"># Create the interface to the destination item. At this point the item</span>
         <span class="c1"># may already exist on the server but if not, it will not be created</span>
@@ -99,9 +99,10 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">log</span><span class="p">(</span>
                 <span class="s1">&#39;Skipping </span><span class="si">{}</span><span class="s1"> because no destination item was &#39;</span>
                 <span class="s1">&#39;created.&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">full_name</span><span class="p">))</span>
-            <span class="k">return</span>
+            <span class="k">return</span> <span class="kc">False</span>
 
         <span class="n">already_exists</span> <span class="o">=</span> <span class="n">dst_copy</span><span class="o">.</span><span class="n">exists_on_server</span><span class="p">()</span>
+        <span class="n">processed</span> <span class="o">=</span> <span class="ow">not</span> <span class="n">already_exists</span>
 
         <span class="c1"># Create the item on the destination server</span>
         <span class="n">should_create</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_should_create</span><span class="p">(</span>
@@ -123,12 +124,16 @@
             <span class="n">already_exists</span><span class="o">=</span><span class="n">already_exists</span><span class="p">,</span> <span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">label</span><span class="o">=</span><span class="n">label</span><span class="p">)</span>
 
         <span class="k">if</span> <span class="n">should_recurse</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">_recurse</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">to_children</span><span class="o">=</span><span class="n">dst_copy</span><span class="p">)</span>
+            <span class="n">children_processed</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_recurse</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span>
+                                             <span class="n">to_children</span><span class="o">=</span><span class="n">dst_copy</span><span class="p">)</span>
+            <span class="n">processed</span> <span class="o">=</span> <span class="n">children_processed</span> <span class="ow">or</span> <span class="n">processed</span>
 
         <span class="c1"># Tasks that are run after the item is created and after recursion to</span>
         <span class="c1"># child items</span>
         <span class="k">if</span> <span class="n">should_create</span><span class="p">:</span>
             <span class="n">dst_copy</span><span class="o">.</span><span class="n">post_create</span><span class="p">()</span>
+
+        <span class="k">return</span> <span class="n">processed</span>
 
     <span class="k">def</span> <span class="nf">_should_create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">already_exists</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
 
@@ -270,7 +275,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.1.
     </div>
   </body>
 </html>
