--- a/_modules/copyxnat/xnat/commands.html
+++ b/_modules/copyxnat/xnat/commands.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>copyxnat.xnat.commands &#8212; CopyXnat  documentation</title>
-    <link rel="stylesheet" href="../../../_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="../../../_static/classic.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="../../../_static/classic.css" />
     
-    <script id="documentation_options" data-url_root="../../../" src="../../../_static/documentation_options.js"></script>
+    <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js"></script>
     <script src="../../../_static/jquery.js"></script>
     <script src="../../../_static/underscore.js"></script>
     <script src="../../../_static/doctools.js"></script>
@@ -43,6 +43,8 @@
 <span class="sd">&quot;&quot;&quot;Commands defining actions that can be performed with copyxnat&quot;&quot;&quot;</span>
 <span class="kn">from</span> <span class="nn">abc</span> <span class="kn">import</span> <span class="n">abstractmethod</span>
 
+<span class="kn">from</span> <span class="nn">copyxnat.xnat.xnat_interface</span> <span class="kn">import</span> <span class="n">XnatSubject</span>
+
 
 <div class="viewcode-block" id="Command"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">[docs]</a><span class="k">class</span> <span class="nc">Command</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;Wraps a command function and its input variables&quot;&quot;&quot;</span>
@@ -53,15 +55,20 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">outputs</span> <span class="o">=</span> <span class="kc">None</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">ignore_filter</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">initial_from_parent</span> <span class="o">=</span> <span class="kc">None</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">processed_counts</span> <span class="o">=</span> <span class="n">inputs</span><span class="o">.</span><span class="n">processed_counts</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">limit_reached</span> <span class="o">=</span> <span class="kc">False</span>
 
 <div class="viewcode-block" id="Command.run"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">[docs]</a>    <span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Run this command recursively on the xnat_item and its children</span>
 
 <span class="sd">        :xnat_item: The source server XnatItem to process</span>
+<span class="sd">        :returns: True if the command was actually run on any item</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_run</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">initial_from_parent</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_update_progress</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">)</span></div>
+        <span class="n">processed</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_run</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span>
+                              <span class="n">from_parent</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">initial_from_parent</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_update_progress</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">)</span>
+        <span class="k">return</span> <span class="n">processed</span></div>
 
 <div class="viewcode-block" id="Command.run_next"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_next">[docs]</a>    <span class="k">def</span> <span class="nf">run_next</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -71,13 +78,40 @@
 <span class="sd">        :xnat_item: The source server XnatItem to process</span>
 <span class="sd">        :from_parent: The value returned by this function when it was run on</span>
 <span class="sd">        this xnat_item&#39;s parent</span>
+<span class="sd">        :returns: True if the command was actually run on any item</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_run</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="o">=</span><span class="n">from_parent</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_update_progress</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">)</span></div>
+        <span class="n">processed</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_run</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="o">=</span><span class="n">from_parent</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_update_progress</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">)</span>
+        <span class="k">return</span> <span class="n">processed</span></div>
 
     <span class="k">def</span> <span class="nf">_recurse</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">to_children</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+        <span class="n">any_processed</span> <span class="o">=</span> <span class="kc">False</span>
         <span class="k">for</span> <span class="n">child</span> <span class="ow">in</span> <span class="n">xnat_item</span><span class="o">.</span><span class="n">get_children</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ignore_filter</span><span class="p">):</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">run_next</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">child</span><span class="p">,</span> <span class="n">from_parent</span><span class="o">=</span><span class="n">to_children</span><span class="p">)</span>
+
+            <span class="n">processed</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">run_next</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">child</span><span class="p">,</span> <span class="n">from_parent</span><span class="o">=</span><span class="n">to_children</span><span class="p">)</span>
+
+            <span class="k">if</span> <span class="n">processed</span><span class="p">:</span>
+                <span class="n">any_processed</span> <span class="o">=</span> <span class="kc">True</span>
+
+                <span class="c1"># Update counts for number of items processed of each type</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">processed_counts</span><span class="p">[</span><span class="n">child</span><span class="o">.</span><span class="n">xnat_type</span><span class="p">]</span> <span class="o">=</span> \
+                    <span class="bp">self</span><span class="o">.</span><span class="n">processed_counts</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">child</span><span class="o">.</span><span class="n">xnat_type</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span> <span class="o">+</span> <span class="mi">1</span>
+
+                <span class="c1"># If maximum processed items limit exceeded, exit early</span>
+                <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_limit_exceeded</span><span class="p">(</span><span class="n">child</span><span class="p">):</span>
+                    <span class="bp">self</span><span class="o">.</span><span class="n">limit_reached</span> <span class="o">=</span> <span class="kc">True</span>
+                    <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">log</span><span class="p">(</span>
+                        <span class="s1">&#39;Skipping further subject processing as subject limit &#39;</span>
+                        <span class="s1">&#39;has been exceeded.&#39;</span><span class="p">)</span>
+                    <span class="k">break</span>
+
+        <span class="k">return</span> <span class="n">any_processed</span>
+
+    <span class="k">def</span> <span class="nf">_limit_exceeded</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">child</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">subject_limit</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="ow">and</span> \
+          <span class="nb">isinstance</span><span class="p">(</span><span class="n">child</span><span class="p">,</span> <span class="n">XnatSubject</span><span class="p">)</span> <span class="ow">and</span> \
+          <span class="bp">self</span><span class="o">.</span><span class="n">processed_counts</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">child</span><span class="o">.</span><span class="n">xnat_type</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span> <span class="o">&gt;=</span> \
+          <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">subject_limit</span>
 
     <span class="k">def</span> <span class="nf">_update_progress</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">):</span>
         <span class="n">xnat_item</span><span class="o">.</span><span class="n">progress_update</span><span class="p">(</span><span class="n">reporter</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="p">)</span>
@@ -92,6 +126,8 @@
 <span class="sd">        :xnat_item: The source server XnatItem to process</span>
 <span class="sd">        :from_parent: The value returned by this function when it was run on</span>
 <span class="sd">        this xnat_item&#39;s parent</span>
+
+<span class="sd">        :returns: True if the command was actually run on any item</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="Command.print_results"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.print_results">[docs]</a>    <span class="k">def</span> <span class="nf">print_results</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
@@ -104,11 +140,12 @@
 <div class="viewcode-block" id="CommandInputs"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandInputs">[docs]</a><span class="k">class</span> <span class="nc">CommandInputs</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;Wrap global input variables for a command&quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dst_xnat</span><span class="p">,</span> <span class="n">reporter</span><span class="p">,</span> <span class="n">app_settings</span><span class="p">,</span> <span class="n">rsync</span><span class="p">,</span>
-                 <span class="n">dst_project</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+                 <span class="n">processed_counts</span><span class="p">,</span> <span class="n">dst_project</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dst_project</span> <span class="o">=</span> <span class="n">dst_project</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">app_settings</span> <span class="o">=</span> <span class="n">app_settings</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span> <span class="o">=</span> <span class="n">reporter</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dst_xnat</span> <span class="o">=</span> <span class="n">dst_xnat</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">processed_counts</span> <span class="o">=</span> <span class="n">processed_counts</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">rsync</span> <span class="o">=</span> <span class="n">rsync</span></div>
 </pre></div>
 
@@ -151,7 +188,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.1.
     </div>
   </body>
 </html>
